# brisc

./: .gitignore  .pre-commit-config.yaml  README.md  package-list.txt  pyproject.toml  setup.py
brisc/barcode_library_processing/: batch_bowtie_collapse.sh  batchviruslibrary_matlab.m  bowtie_collapse.sh  convert_external_libraries.ipynb  fastqs.txt  mat_conversion.py  nextera_rhAMP.fa  pattern_match.py
brisc/bulb_grant_202406/: example_starter.py  register_rois.ipynb  rotating_3d_spots.py
brisc/cells_and_barcodes/: cells_and_barcode_plots.ipynb  in_situ_matching_library.ipynb  rabies_presyn_ensembles.ipynb  shuffled_matrices.ipynb
brisc/example_sections/: coronal_view_phpeb.ipynb
brisc/exploratory_analysis/: README.md  double_barcoded_starters.ipynb  fig_inhibitory_cells.ipynb  mcherry_cell_density.ipynb  mcherry_cell_distribution.ipynb  multiple_labelled_starter.ipynb  plot_summary_for_all_bc.py  spatial_distribution.ipynb
brisc/manuscript_analysis/: barcodes_in_cells.py  bootstrapping.py  brainrender_3d.py  cell_barcode_assignment.py  cell_typing.py  connectivity_matrices.py  distance_between_cells.py  double_labeling_estimation.py  flatmap_projection.py  gene_transcript_plots.py  load.py  match_to_library.py  mcherry_intensity.py  overview_image.py  rabies_cell_counting.py  sensitivity.py  spatial_plots_rabies.py  start_density_sim.py  starter_cell_counting.py  utils.py  viral_library.py
brisc/manuscript_figures/: fig1_plasmid_barcoding_schema_library.ipynb  fig_long_range.ipynb  (+20 more)
manuscript_figures/: barcode_library_figure.ipynb  double_labeling_analysis.ipynb  figure1_plasmid_barcoding_schema_library.ipynb  figure2_data_overview_images.ipynb  figure3_barcodes_in_cells_overview.ipynb  figure4_spatial_barcodes.ipynb  figure5_connectivity_matrices.ipynb  figure6_long_range.ipynb  print_numbers.ipynb  suppfig1_diversity.ipynb  suppfig2_preperstart_with_iv.ipynb  suppfig3_barcodelength.ipynb  suppfig4_mcherry_cellpositions.ipynb  suppfig5_multiple_starter_bcs.ipynb  suppfig6_multiple_starter_bcs.ipynb  suppfig7_transcriptomics_validation.ipynb  suppfig8_double_labeling_analysis.ipynb  suppfig_barcodelength.ipynb  suppfig_reviewer_elevation.ipynb
scripts/: brainmapper_bash.sh  brainmapper_bash_BRAC11816.2e.sh  plot_all.py  submit_tail_cortex_revision.sh
(+26 files in other folders)
