[project]
name = "brisc"
authors = [{name = "Znamenskiy lab", email= "antonin.blot@crick.ac.uk"}]
description = "BRISC: Barcoded Rabies In-Situ Connectomics"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]
dependencies = [
        "numpy",
        "pandas",
        "pathlib",
        "matplotlib",
        "czifile",
        "brainglobe-atlasapi",
        "opencv-python",
        "Pillow",
        "ccf_streamlines",
        "iss_preprocess @ git+ssh://git@github.com/znamlab/iss-preprocess.git",
        "iss_analysis @ git+ssh://git@github.com/znamlab/iss-analysis.git",
        "cricksaw_analysis @ git+ssh://git@github.com/znamlab/cricksaw-analysis.git",
        "flexiznam @ git+ssh://git@github.com/znamlab/flexiznam.git",
        "scanpy",
        "tables",
        "shapely",
        "editdistance",]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/znamlab/brisc"
"Bug Tracker" = "https://github.com/znamlab/brisc/issues"
"Source Code" = "https://github.com/znamlab/brisc"
"User Support" = "https://github.com/znamlab/brisc/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "imageio",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brisc*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=brisc"

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 88

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
]


[tool.ruff]
line-length = 88
exclude = ["__init__.py","build",".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brisc --cov-report=xml
"""
